--- a/src/main/resources/javafx/scene.fxml
+++ b/src/main/resources/javafx/scene.fxml
@@ -7,10 +7,10 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.SaturnMainController">
    <children>
-      <TextField layoutX="61.0" layoutY="49.0" />
-      <Button layoutX="110.0" layoutY="247.0" mnemonicParsing="false" text="submit" />
-      <TextField layoutX="61.0" layoutY="94.0" />
-      <TextField layoutX="61.0" layoutY="136.0" />
-      <TextField layoutX="61.0" layoutY="187.0" />
+      <TextField fx:id="nameField" layoutX="61.0" layoutY="49.0" />
+      <Button fx:id="submitBtn" layoutX="110.0" layoutY="247.0" mnemonicParsing="false" text="submit" />
+      <TextField fx:id="passwordField" layoutX="61.0" layoutY="94.0" />
+      <TextField fx:id="postField" layoutX="61.0" layoutY="136.0" />
+      <TextField fx:id="permissionField" layoutX="61.0" layoutY="187.0" />
    </children>
 </AnchorPane>
