--- a/src/main/resources/javafx/log_in.fxml
+++ b/src/main/resources/javafx/log_in.fxml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.SGSJ.Saturn.controller.LogIn.LogInController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.controller.LogIn.LogInController">
+   <children>
+      <FlowPane layoutX="415.0" layoutY="223.0" orientation="VERTICAL" prefHeight="254.0" prefWidth="170.0" vgap="10.0">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" prefWidth="170.0" text="Ingreso al Sistema" textAlignment="CENTER">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <GridPane prefHeight="213.0" prefWidth="138.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Usuario:" />
+                        <TextField fx:id="usernameField" onKeyTyped="#handleTextChanged" prefWidth="170.0" promptText="Usuario..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label text="Contraseña:" />
+                        <PasswordField fx:id="passwordField" onKeyTyped="#handleTextChanged" prefWidth="170.0" promptText="Contraseña..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                     <children>
+                        <Button fx:id="logInBtn" mnemonicParsing="false" onAction="#handleLogIn" prefWidth="85.0" text="Ingresar" />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                     <children>
+                        <Label text="¿No tiene cuenta?" />
+                        <Hyperlink fx:id="toRegisterLink" onAction="#handleSwitchRegister" text="Cree una!" />
+                     </children>
+                  </FlowPane>
+               </children>
+            </GridPane>
+         </children>
+      </FlowPane>
+   </children>
 </AnchorPane>
