--- a/src/main/resources/javafx/register.fxml
+++ b/src/main/resources/javafx/register.fxml
@@ -1,55 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.controller.Register.RegisterController">
    <children>
-      <GridPane layoutX="421.0" layoutY="199.0" prefHeight="302.0" prefWidth="157.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <FlowPane layoutX="400.0" layoutY="167.0" orientation="VERTICAL" prefHeight="365.0" prefWidth="200.0" vgap="10.0">
          <children>
-            <Button mnemonicParsing="false" text="Registrar" GridPane.rowIndex="4" />
-            <FlowPane prefHeight="200.0" prefWidth="200.0">
+            <Label alignment="CENTER" prefWidth="170.0" text="Registro" textAlignment="CENTER">
+               <FlowPane.margin>
+                  <Insets />
+               </FlowPane.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <GridPane prefHeight="295.0" prefWidth="170.0" vgap="5.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Label text="Nombre de Usuario:" />
-                  <TextField promptText="usuario..." />
+                  <FlowPane orientation="VERTICAL" prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Nombre de Usuario:" />
+                        <TextField fx:id="usernameField" onKeyTyped="#handleTextChanged" prefHeight="26.0" prefWidth="170.0" promptText="Usuario..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane orientation="VERTICAL" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label text="Contraseña:" />
+                        <PasswordField fx:id="passwordField" onKeyTyped="#handleTextChanged" prefWidth="170.0" promptText="Contraseña..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane orientation="VERTICAL" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+                     <children>
+                        <Label text="Repetir Contraseña:" />
+                        <PasswordField fx:id="confirmPasswordField" onKeyTyped="#handleTextChanged" prefWidth="170.0" promptText="Repetir Contraseña..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
+                     <children>
+                        <Label text="Cargo en la Empresa:" />
+                        <TextField fx:id="postField" onKeyTyped="#handleTextChanged" prefWidth="170.0" promptText="Cargo..." />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
+                     <children>
+                        <Button fx:id="registerBtn" mnemonicParsing="false" onAction="#handleRegister" prefWidth="85.0" text="Registrar" />
+                     </children>
+                  </FlowPane>
+                  <FlowPane prefHeight="26.0" prefWidth="162.0" GridPane.rowIndex="5">
+                     <children>
+                        <Label text="¿Ya tiene cuenta?" />
+                        <Hyperlink fx:id="toLogInLink" onAction="#handleSwitchLogIn" text="Ingrese al sistema" />
+                     </children>
+                  </FlowPane>
                </children>
-            </FlowPane>
-            <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <Label text="Contraseña:" />
-                  <TextField promptText="contraseña..." />
-               </children>
-            </FlowPane>
-            <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
-               <children>
-                  <Label text="Repetir Contraseña:" />
-                  <TextField promptText="repetir contraseña..." />
-               </children>
-            </FlowPane>
-            <FlowPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Cargo en la Empresa:" />
-                  <TextField promptText="cargo..." />
-               </children>
-            </FlowPane>
+               <FlowPane.margin>
+                  <Insets />
+               </FlowPane.margin>
+            </GridPane>
          </children>
-      </GridPane>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </FlowPane>
    </children>
 </AnchorPane>
