--- a/src/main/resources/javafx/applicant_detail.fxml
+++ b/src/main/resources/javafx/applicant_detail.fxml
@@ -78,20 +78,52 @@
                                     <Insets left="10.0" />
                                  </GridPane.margin>
                               </Label>
+                              <Label fx:id="nameLabel" GridPane.columnIndex="1">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label fx:id="mainPhoneLabel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="secondaryPhoneLabel" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="emailLabel" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin>
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
                            </children>
                         </GridPane>
                         <HBox alignment="CENTER" layoutX="20.0" layoutY="219.0" prefHeight="100.0" prefWidth="200.0" spacing="15.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Aceptar" />
-                              <Button mnemonicParsing="false" text="Rechazar" />
-                              <Button mnemonicParsing="false" text="Eliminar" />
+                              <Button fx:id="acceptBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Aceptar" />
+                              <Button fx:id="rejectBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Rechazar" />
+                              <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Eliminar" />
                            </children>
                         </HBox>
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0" />
                      </children>
                   </AnchorPane>
               </items>
