--- a/src/main/resources/javafx/vacancy_detail.fxml
+++ b/src/main/resources/javafx/vacancy_detail.fxml
@@ -1,14 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.SGSJ.Saturn.controller.VacancyDetail.VacancyDetailController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.controller.VacancyDetail.VacancyDetailController">
+    <left>
+        <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <children>
+                <Button fx:id="toApplicantSceneBtn" minHeight="50.0" mnemonicParsing="false" onAction="#handleSceneChangeButtonPressed" text="POSTULANTES" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                <Button fx:id="toVacancySceneBtn" layoutY="50.0" minHeight="50.0" mnemonicParsing="false" onAction="#handleSceneChangeButtonPressed" text="VACANTES" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+            </children>
+        </AnchorPane>
+    </left>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Vacante Laboral" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <GridPane layoutX="85.0" layoutY="84.0" prefHeight="91.0" prefWidth="515.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="255.0" AnchorPane.topAnchor="84.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.5999755859375" minWidth="10.0" prefWidth="158.999951171875" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="214.60003662109375" minWidth="10.0" prefWidth="176.00002441406247" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.5999755859375" minWidth="10.0" prefWidth="74.39997558593751" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="146.59997558593744" minWidth="10.0" prefWidth="107.99995117187501" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Nombre Vacante">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </Label>
+                  <Label text="Oferta" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <TextField fx:id="nameField" editable="false" onKeyTyped="#handleTextChanged" prefHeight="26.0" prefWidth="121.0" GridPane.columnIndex="1" />
+                  <TextField fx:id="jobOfferField" editable="false" onKeyTyped="#handleTextChanged" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Button fx:id="editBtn" mnemonicParsing="false" onAction="#handleEditVacancy" prefHeight="34.0" text="Editar" GridPane.columnIndex="2" GridPane.rowSpan="2">
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="dismissBtn" mnemonicParsing="false" onAction="#handleEditVacancy" prefHeight="34.0" text="Descartar" visible="false" GridPane.columnIndex="3" GridPane.rowSpan="2">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+   </center>
+</BorderPane>
