Add identification to user properties

--- a/src/main/resources/javafx/applicant_main.fxml
+++ b/src/main/resources/javafx/applicant_main.fxml
@@ -42,7 +42,7 @@
          <center>
             <TableView fx:id="applicantTable" onMouseClicked="#handleClickCell" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <columns>
-                <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
+                <TableColumn fx:id="idColumn" prefWidth="75.0" text="CEDULA" />
                 <TableColumn fx:id="nameColumn" prefWidth="75.0" text="NOMBRE" />
                   <TableColumn fx:id="mainPhoneColumn" prefWidth="75.0" text="TELEFONO" />
                   <TableColumn fx:id="secondaryPhoneColumn" prefWidth="75.0" text="TELEFONO SECUNDARIO" />
