Add log in & log out logic to interface and handling it's exceptions.

--- a/src/main/resources/javafx/applicant_main.fxml
+++ b/src/main/resources/javafx/applicant_main.fxml
@@ -53,4 +53,7 @@
          </center>
       </BorderPane>
    </center>
+   <top>
+      <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#handleLogOut" text="Cerrar Sesión" BorderPane.alignment="TOP_RIGHT" />
+   </top>
 </BorderPane>
