--- a/src/main/resources/javafx/vacancy_detail.fxml
+++ b/src/main/resources/javafx/vacancy_detail.fxml
@@ -74,4 +74,7 @@
          </children>
       </AnchorPane>
    </center>
+    <top>
+        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#handleLogOut" text="Cerrar Sesión" BorderPane.alignment="TOP_RIGHT" />
+    </top>
 </BorderPane>
