--- a/src/main/resources/javafx/vacancy_main.fxml
+++ b/src/main/resources/javafx/vacancy_main.fxml
@@ -55,4 +55,7 @@
             </center>
         </BorderPane>
     </center>
+    <top>
+        <Button fx:id="logOutBtn" mnemonicParsing="false" onAction="#handleLogOut" text="Cerrar Sesión" BorderPane.alignment="TOP_RIGHT" />
+    </top>
 </BorderPane>
