--- a/src/main/resources/javafx/vacancy_main.fxml
+++ b/src/main/resources/javafx/vacancy_main.fxml
@@ -41,6 +41,11 @@
                      </children>
                   </VBox>
                   <Label text="100" />
+                  <Button fx:id="vacancyNewBtn" alignment="CENTER" mnemonicParsing="false" onAction="#handleNewVacancy" text="Nueva Vacante">
+                     <HBox.margin>
+                        <Insets left="20.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
                 </HBox>
             </top>
