--- a/src/main/resources/javafx/dialog_create_vacancy.fxml
+++ b/src/main/resources/javafx/dialog_create_vacancy.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="140.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.controller.VacancyMain.VacancyMainDialogController">
+<AnchorPane prefHeight="140.0" prefWidth="298.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.view.controller.VacancyMain.VacancyMainDialogController">
    <children>
       <GridPane layoutX="14.0" layoutY="14.0" prefHeight="61.0" prefWidth="264.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
