--- a/src/main/resources/javafx/register.fxml
+++ b/src/main/resources/javafx/register.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.controller.Register.RegisterController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.view.controller.Register.RegisterController">
    <children>
       <FlowPane layoutX="400.0" layoutY="167.0" orientation="VERTICAL" prefHeight="365.0" prefWidth="200.0" vgap="10.0">
          <children>
