--- a/src/main/resources/javafx/applicant_detail.fxml
+++ b/src/main/resources/javafx/applicant_detail.fxml
@@ -123,7 +123,7 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <ImageView fitHeight="654.0" fitWidth="354.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="20.0" />
+                        <ImageView fx:id="imagePreview" fitHeight="654.0" fitWidth="354.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="23.0" AnchorPane.topAnchor="20.0" />
                      </children>
                   </AnchorPane>
               </items>
