--- a/src/main/resources/javafx/dialog_update_applicant_state.fxml
+++ b/src/main/resources/javafx/dialog_update_applicant_state.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="207.0" prefWidth="328.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.SGSJ.Saturn.view.controller.ApplicantDetail.ApplicantDetailDialogController">
    <children>
       <Label layoutX="121.0" layoutY="14.0" text="Actualizar Estado" AnchorPane.topAnchor="14.0">
@@ -14,7 +13,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="messageLabel" layoutX="136.0" layoutY="42.0" AnchorPane.leftAnchor="20.0" />
+      <Label fx:id="messageLabel" layoutX="136.0" layoutY="42.0" wrapText="true" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" />
       <HBox layoutX="187.0" layoutY="156.0" spacing="25.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
          <children>
             <Button fx:id="confirmBtn" mnemonicParsing="false" onAction="#handleButtonPressed" text="Confirmar" />
