Add update button to the tables

--- a/src/main/resources/javafx/applicant_main.fxml
+++ b/src/main/resources/javafx/applicant_main.fxml
@@ -33,6 +33,8 @@
                   <RadioButton fx:id="enEsperaRadioBtn" mnemonicParsing="false" onAction="#handleTogglePressed" selected="true" text="En Espera" />
                   <RadioButton fx:id="aceptadoRadioBtn" mnemonicParsing="false" onAction="#handleTogglePressed" selected="true" text="Aceptado" />
                   <RadioButton fx:id="rechazadoRadioBtn" mnemonicParsing="false" onAction="#handleTogglePressed" selected="true" text="Rechazado" />
+                  <AnchorPane prefHeight="100.0" prefWidth="95.0" />
+                  <Button fx:id="updateBtn" mnemonicParsing="false" onAction="#handleUpdate" text="Actualizar" />
                </children>
                <padding>
                   <Insets left="30.0" />
