--- a/src/main/resources/javafx/vacancy_main.fxml
+++ b/src/main/resources/javafx/vacancy_main.fxml
@@ -46,6 +46,12 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                   </Button>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                  <Button fx:id="updateBtn" mnemonicParsing="false" onAction="#handleUpdate" text="Actualizar">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                  </Button>
                </children>
                 </HBox>
             </top>
